--- a/WebTechnology/New Programs/Fibonacci.html
+++ b/WebTechnology/New Programs/Fibonacci.html
@@ -9,24 +9,41 @@
 <body>
     <script>
         n = parseInt(prompt("Enter the number of numbers you want to print:"));
-        j = 0;
-        lno = 0;
-        nno = 0;
-        for(i=0;i<n;i++){
-            if(j==0){
-                lno = j;
-                j++;
-                nno = j;
-                document.write(lno+"  ");
-                document.write(nno+"  ");
-            }
-            else{
-                x =lno;
-                lno = nno;
-                nno = lno+x;
-                document.write(nno+"  ");
-            }
+        if(n==1){
+         document.write("0");
+
+        }else if(n==2){
+         document.write("0  1");
         }
+        else if(n>2){
+         j = 2;
+         lno = 0;
+         nno = 1;
+         document.write(lno+"  "+nno);
+         while(j<n){
+             extra = nno; 
+             nno = nno + lno;
+             lno = extra;
+             document.write("  "+nno);
+             j++;
+         }
+        }
+
+        // for(i=0;i<n;i++){
+        //     if(j==0){
+        //         lno = j;
+        //         j++;
+        //         nno = j;
+        //         document.write(lno+"  ");
+        //         document.write(nno+"  ");
+        //     }
+        //     else{
+        //         x =lno;
+        //         lno = nno;
+        //         nno = lno+x;
+        //         document.write(nno+"  ");
+        //     }
+        // }
     </script>
 </body>
 </html>
