--- a/WebTechnology/BasicPrograms/03_Pattern1.html
+++ b/WebTechnology/BasicPrograms/03_Pattern1.html
@@ -13,7 +13,7 @@
             for(j=0;j<n;j++){
                 document.write("* ");
             }
-            document.write("<br/>")
+            document.write("<br/>");
         }
     </script>
 </body>
