--- a/WebTechnology/Lab-03/05_atoa.html
+++ b/WebTechnology/Lab-03/05_atoa.html
@@ -1,3 +1,4 @@
+<!-- Write An html file with javaScript that finds position of first occurence of vovel 'a' and last occurence of vovel 'a' in a given word and returns the string between them -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
