--- a/WebTechnology/Lab-03/03_TwoDigitSaperatePower.html
+++ b/WebTechnology/Lab-03/03_TwoDigitSaperatePower.html
@@ -1,3 +1,4 @@
+<!-- WA JavaScript to take two digit numbers and then saperate this two digits then multiply first digits for second digit times.  -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
