--- a/WebTechnology/Lab-03/04_SearchWordInArray.html
+++ b/WebTechnology/Lab-03/04_SearchWordInArray.html
@@ -1,3 +1,4 @@
+<!-- WA JavaScript that uses a loop that searches a word in sentence held in an array and returning the index of the words -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
