--- a/WebTechnology/New Programs/Factorial.html
+++ b/WebTechnology/New Programs/Factorial.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <script>
-        s1 = prompt("Enter the String 1:");
-        s2 = prompt("Enter the String 2:");
-        console.log(s1+s2);
-        
+        n = parseInt(prompt("Enter the number:"));
+        answer = 1;
+        for(i = n;i>0;i--){
+            answer *= i;
+        }
+        document.write(n+"!="+answer);
     </script>
 </body>
 </html>
