--- a/WebTechnology/Lab-03/07_ArraySort.html
+++ b/WebTechnology/Lab-03/07_ArraySort.html
@@ -1,3 +1,4 @@
+ <!-- WAP to read an array from the user and sort them in ascending order -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,8 +12,20 @@
         n = parseInt(prompt("Enter the number of elements"));
         let numbers = new Array(n);
         for(i = 0; i<n ; i++){
-            numbers[i] = parseInt(prompt("Enter the number "+(i+1)+" :"));
+            numbers[i] = parseInt(prompt("Enter the number "+i+" :"));
+        }
+        for(i = 0;i<n;i++){
+            for(j = i;j<n;j++){
+                if(numbers[i]>numbers[j]){
+                    extra = numbers[i];
+                    numbers[i] = numbers[j];
+                    numbers[j] = extra;
+                }
+            }
+        }
+        for(i = 0; i<n ; i++){
+            console.log(numbers[i]);
         }
     </script>
-</body>
+</body>k
 </html>
