--- a/WebTechnology/Lab-02/GCDTwoNumbers.html
+++ b/WebTechnology/Lab-02/GCDTwoNumbers.html
@@ -16,11 +16,10 @@
         const factors1 = [];
         for(i = 1; i<parseInt(no1/2); i++){
             if(no1%i==0){
-                factors1[nof1] = i;
-                nof1++;
+                factors1.push(i);
             }
         }
-        factors1[nof1] = no1;
+        factors1.push(no1);
         // storing the factors of number 1
 
         // storing the factors of number 2
@@ -28,16 +27,15 @@
         const factors2 = [];
         for(i = 1; i<parseInt(no2/2); i++){
             if(no2%i==0){
-                factors2[nof2] = i;
-                nof2++;
+                factors2.push(i);
             }
         }
-        factors2[nof2] = no2;
+        factors2.push(no2);
         // storing the factors of number 1
         gcd = 0;
         flag = false;
-        for(i = nof1; i>=0; i--){
-            for(j = nof2; j>=0; j--){
+        for(i = factors1.length-1; i>=0; i--){
+            for(j = factors2.length-1; j>=0; j--){
                 if(factors1[i]==factors2[j]){
                     gcd = factors1[i];
                     flag = true;
