--- a/WebTechnology/Lab-02/GCDTwoNumbers.html
+++ b/WebTechnology/Lab-02/GCDTwoNumbers.html
@@ -48,7 +48,7 @@
             document.write(gcd+" is gcd");
         }
         else{
-            document.write("Please enter the correct number")
+            document.write("Please enter the correct number");
         }
     </script>
 </body>
