--- a/WebTechnology/Lab-03/10_ArrayDemo.html
+++ b/WebTechnology/Lab-03/10_ArrayDemo.html
@@ -11,7 +11,7 @@
     <script>
         let myArray = ["Devanshu","Kenil","Heet","Mubin","Divyank","Karan","Utam"];
         myArray.sort();
-        console.log(myArray)
+        console.log(myArray);
         myArray.pop();
         myArray.push("Kishan");
     </script>
