--- a/WebTechnology/Java Script Demo/CalculatorWithLogic.html
+++ b/WebTechnology/Java Script Demo/CalculatorWithLogic.html
@@ -18,7 +18,7 @@
         <button class="buttons" onclick="operation(this)">+</button>
         <button class="buttons" onclick="input(this)">&pi;</button>
         <button class="buttons" onclick="input(this)">e</button>
-        <button class="buttons" onclick="clearScreen(this)">C</button>
+        <button class="buttons" onclick="clearScreen()">C</button>
         <button class="buttons" onclick="goBack(this)">Back</button>
         <button class="buttons" onclick="operation(this)">x
             <sup>2</sup>
@@ -55,6 +55,8 @@
         <button class="buttons" onclick="input(this)">.</button>
         <button class="buttons" onclick="output()" >=</button>
     </div>
-    <script src="Calculator.js"></script>
+    <script src="Calculator.js">
+        
+    </script>
 </body>
 </html>
