--- a/WebTechnology/Lab-04-and-05/StopWatch.html
+++ b/WebTechnology/Lab-04-and-05/StopWatch.html
@@ -61,7 +61,7 @@
             }
         }
         function startCounter(){
-            c = setInterval(printCounter,10)    
+            c = setInterval(printCounter,10);
         }
         function printCounter(){
             a++;
