--- a/WebTechnology/Java Script Demo/CalculatorWithLogic.html
+++ b/WebTechnology/Java Script Demo/CalculatorWithLogic.html
@@ -55,7 +55,7 @@
         <button class="buttons" onclick="input(this)">.</button>
         <button class="buttons" onclick="output()" >=</button>
     </div>
-    <script src="Calculator.js">
+    <script src="CalculatorWithLogic.js">
         
     </script>
 </body>
