--- a/WebTechnology/Lab-4,5,6,7/newSnake.html
+++ b/WebTechnology/Lab-4,5,6,7/newSnake.html
@@ -9,8 +9,8 @@
 <body  onkeydown="runSnake()">
     
     <div style="border:5px solid black ; position: absolute; top: 0px; left: 0px;" id="mainContainer"></div>
-    <img src="snakeimg.gif" style=" position: absolute;width: 100px;height: 100px;border: 3px solid #73AD21;"id="snakeid">
-    <img src="snakefood.png" style="position: absolute;width: 20px;height: 20px;" id="food">
+    <img src="https://th.bing.com/th/id/R.b7a4b900314521605c502666c0517912?rik=CMqHwHqr6pUNRA&riu=http%3a%2f%2fs1.picswalls.com%2fwallpapers%2f2014%2f07%2f18%2ffree-snake-wallpaper_105103231_59.jpg&ehk=88KGOMZmg6s3M%2bzxzwrQ3enjEtrjlvYzEu1Qcb0yh6c%3d&risl=&pid=ImgRaw&r=0" style=" position: absolute;width: 100px;height: 100px;border: 3px solid #73AD21;"id="snakeid">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMBb96JFtyzZkmqZOTuaBdZMi96qBzwNa5hg&usqp=CAU" style="position: absolute;width: 20px;height: 20px;" id="food">
     <div id="scoreBoard" style="position: absolute;" ><h1>score : </h1><h2 id="scorecount">0</h2></div>
     <div id="lifeBoard" style="position: absolute;" ><h1>life : </h1><h2 id="lifecount">3</h2></div>
 
