--- a/WebTechnology/Lab-4,5,6,7/Snake.html
+++ b/WebTechnology/Lab-4,5,6,7/Snake.html
@@ -74,7 +74,7 @@
 		console.log(a);
 		function newFood(){
 			fooditem = document.getElementById("food");
-			fooditem.style.top = (Math.random()*80+19)+'vh';
+			fooditem.style.top = (Math.random()*(screen.width)*0.58)+px;
 			fooditem.style.left = (Math.random()*80+11)+'vw';
 		}
 		function startMoving(direction){
