--- a/WebTechnology/Java Script/ES6/ArrayFunctions/includeFun.html
+++ b/WebTechnology/Java Script/ES6/ArrayFunctions/includeFun.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<title></title>
-</head>
-<body>
-	<script type="text/javascript">
-		students = ["arjun","rajkot","gujarat","INDIA"];
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+  </head>
+  <body>
+    <script type="text/javascript">
+      students = ["Devanshu", "Mubin", "Divyank", "Karan"];
 
-		const ans = students.includes("morbi");
+      //includes() function returns the true or false
+      const ans = students.includes("Devanshu");
+      const newAns = students.includes("Kishan");
 
-		console.log(ans);
-	</script>
-</body>
+      console.log(ans);
+      console.log(newAns);
+    </script>
+  </body>
 </html>
