--- a/WebTechnology/Java Script/ES6/ArrayFunctions/mapDemo.html
+++ b/WebTechnology/Java Script/ES6/ArrayFunctions/mapDemo.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h2>JavaScript Map Objects</h2>
-<p>Objects as keys in a Map:</p>
+  <body>
+    <h2>JavaScript Map Objects</h2>
+    <p>Objects as keys in a Map:</p>
 
-<p id="demo"></p>
+    <p id="demo"></p>
 
-<script>
-// Create Objects
-const apples = {name: 'Apples'};
-const bananas = {name: 'Bananas'};
-const oranges = {name: 'Oranges'};
+    <script>
+      // Create Objects
+      const apples = { name: "Apples" };
+      const bananas = { name: "Bananas" };
+      const oranges = { name: "Oranges" };
 
-// Create a new Map
-const fruits = new Map();
+      // Create a new Map
+      const fruits = new Map();
 
-// Add the Objects to the Map
-fruits.set(apples, 500);
-fruits.set(bananas, 300);
-fruits.set(oranges, 200);
+      // Add the Objects to the Map
+      fruits.set(apples, 500);
+      fruits.set(bananas, 300);
+      fruits.set(oranges, 200);
 
-// Display Object Type
-// document.getElementById("demo").innerHTML = fruits
-console.log(fruits);
-</script>
-
-</body>
+      // Display Object Type
+      // document.getElementById("demo").innerHTML = fruits
+      console.log(fruits);
+    </script>
+  </body>
 </html>
